--- a/src/app/components/login-register/login-register.component.html
+++ b/src/app/components/login-register/login-register.component.html
@@ -1,9 +1,9 @@
-<section class="content col-md-12 col-xs-12 ">
+<section class="content-custom-form custom-form-margin-top col-md-12 col-xs-12 ">
 
   <div class=" col-xs-12 col-md-12">
     <div class="col-md-12">
         <div class="box-header with-border box box-primary">
-          <h3 class="box-title callout callout-info col-md-12 col-xs-12">Cadastrar Usuário</h3>
+          <h3 class="box-title callout callout-custom col-md-12 col-xs-12">Cadastrar Usuário</h3>
             <div class="form-group">
               <form #formRemedy="ngForm" novalidate>
 
