--- a/src/app/components/login-register/login/login.component.html
+++ b/src/app/components/login-register/login/login.component.html
@@ -2,7 +2,7 @@
 
 </div>
 <div class="login-box-body login-box-body-custom col-md-6">
-    <p class="login-box-msg">GetMyRemedy | APP</p>
+    <h1 class="login-box-msg">GetMyRemedy | APP</h1>
 
     <form method="post" #formLogin="ngForm">
       <div class="form-group has-feedback">
