alteraçao layout pagina principal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,11 +25,13 @@
   </div>
 
   <div *ngIf="router.url == '/'">
-    <div class="content-wrapper background-image-custom">
-        <div class="container">
+      <div class="background-image-custom">
+        <div class="content-wrapper background-image-custom-shadow">
+          <div class="container">
 
-          <gmr-home></gmr-home>
+            <gmr-home></gmr-home>
 
+        </div>
       </div>
     </div>
   </div>
