Alteração em patern do telefone e forms login email

--- a/src/app/components/login-register/login-register.component.html
+++ b/src/app/components/login-register/login-register.component.html
@@ -12,7 +12,7 @@
                 </gmr-input-container>
 
                 <gmr-input-container errorMessage="Campo obrigatório" label="E-mail de usuário:">
-                  <input name="des_mail" class="form-control" placeholder="Coloque o e-mail de usuário" ngModel required>
+                  <input name="des_mail" class="form-control" placeholder="Coloque o e-mail de usuário ex: teste@teste.com" pattern='^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$' ngModel required>
                 </gmr-input-container>
 
                 <gmr-input-container errorMessage="Campo obrigatório" label="Endereço:">
@@ -36,15 +36,15 @@
                 </div>
 
                 <gmr-input-container class="col-md-6 col-xs-12" errorMessage="Campo obrigatório" label="Cep:">
-                  <input name="num_cep" type="number" class="form-control" placeholder="Coloque o CEP" ngModel required>
+                  <input name="num_cep" type="number" class="form-control" placeholder="Coloque o CEP" ngModel minlength="6" required>
                 </gmr-input-container>
 
-                <gmr-input-container class="col-md-6 col-xs-12" errorMessage="Campo obrigatório não pode conter espaços" label="Telefone:">
+                <gmr-input-container class="col-md-6 col-xs-12" errorMessage="Campo obrigatório utilize o formato (xx)xxxxx-xxxx" label="Telefone:">
                   <div class="input-group">
                     <div class="input-group-addon">
                       <i class="fa fa-phone"></i>
                     </div>
-                  <input name="num_phone" class="form-control"  pattern="^[0-9_\-]+$" type="text" placeholder="00 000000000" maxlength="11" ngModel required>
+                  <input name="num_phone" class="form-control"  pattern='^\([1-9]{2}\)[0-9]{4,5}-[0-9]{4}$' type="text" placeholder="(XX)XXXXX-XXXX" maxlength="14"  ngModel required>
                   </div>
                 </gmr-input-container>
 
