--- a/src/app/components/login-register/login/login.component.html
+++ b/src/app/components/login-register/login/login.component.html
@@ -7,7 +7,7 @@
     <form method="post" #formLogin="ngForm">
       <div class="form-group has-feedback">
       <gmr-input-container  [showTip]="false">
-        <input name="des_mail" class="form-control" placeholder="Coloque o e-mail" ngModel required minlength="4">
+        <input name="des_mail" class="form-control" pattern='^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$' placeholder="Coloque o e-mail" ngModel required minlength="4">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </gmr-input-container>
       </div>
